--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Swapanc-dataarchitecture
+title: "swapanc"
 
 # Short description of your site
 description: A virtual proof that I'm awesome
@@ -70,10 +70,10 @@ social-network-links:
   rss: true
   email: "swapan.chakrabarty@gmail.com"
   # facebook: deanattali
-  github: "swapan.chakrabarty@gmail.com"
-  twitter: daattali
+  github: swapanc
+  twitter: swapanchak1224
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: swapanchakrabarty
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -88,9 +88,9 @@ social-network-links:
 # Select which share links to show in posts
 share-links-active:
   twitter: true
-  facebook: false
+  facebook: true
   linkedin: true
-
+  
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
 url-pretty: "swapanc.github.io"  # eg. "deanattali.com/beautiful-jekyll"
